src/components/common/Header/Notification.module.scss
@import '@/styles/_index';
@import '@/styles/_media';

.notificationWindow {
  position: absolute;
  top: 4rem;
  right: 0.5rem;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
  width: 36.8rem;
  height: 41.9rem;
  padding: 2.4rem 2rem;
  cursor: initial;
  background-color: $red-100;
  border: 0.1rem solid $gray-400;
  border-radius: 1rem;
  box-shadow: 0 0.2rem 0.8rem 0 rgb(120 116 134 / 25%);
}

@mixin button {
  @include font-bold;

  font-size: 1.6rem;
  line-height: 2rem;
  color: $black;
  cursor: pointer;

  @include media(mobile) {
    font-size: 1.4rem;
    line-height: 2rem;
  }
}

.notification {
  @include button;

  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2.4rem;
  height: 2.4rem;
  cursor: pointer;
  transition: transform 0.3s ease;

  &::after {
    content: '';
    position: absolute;
    bottom: -0.3rem;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: $red-200;
    transition: width 0.3s ease;
    transform: scaleX(0);
  }

  &:hover {
    transform: scale(1.1);

    &::after {
      width: 100%;
      transform: scaleX(1);
    }
  }
}

.notificationTitleWrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.notificationTitle {
  @include font-bold;

  font-size: 2rem;
  line-height: 2.4rem;
  color: $black;
}

.notificationClose {
  display: none;
  cursor: pointer;
}

.notificationList {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  height: 33.5rem;
  overflow: auto;

  &::-webkit-scrollbar {
    width: 0.3rem;
    background-color: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: $gray-700;
  }
}

.notificationEmpty {
  margin: auto;
}

@mixin notificationWrapper {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
  width: 100%;
  padding: 1.6rem 1.2rem;
  cursor: pointer;
  background-color: $white;
  border: 0.1rem solid $gray-300;
  border-radius: 0.5rem;
}

.notificationReadWrapper {
  @include notificationWrapper;

  opacity: 0.7;
}

.notificationWrapper {
  @include notificationWrapper;
}

@mixin fin {
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
}

.notificationRedFin {
  @include fin;

  background-color: $red-400;
}

.notificationBlueFin {
  @include fin;

  background-color: $blue-200;
}

.notificationText {
  @include font-normal;

  font-size: 1.4rem;
  line-height: 2.2rem;
}

.notificationBlueStatus {
  color: $blue-200;
}

.notificationRedStatus {
  color: $red-400;
}

.notificationDate {
  @include font-normal;

  font-size: 1.2rem;
  line-height: 1.6rem;
  color: $gray-500;
}

@include media(mobile) {
  .notification {
    position: initial;
  }

  .notificationWindow {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 4rem 2rem;
    border: 0;
    border-radius: 0;
    box-shadow: none;
  }

  .notificationClose {
    display: block;
  }

  .notificationList {
    width: 100%;
    height: 100%;
  }
}

